Add a way to register ConfigurationObject globally (#1183)
* Cleanup closeQuietly, Remove unused methods in IoUtil